# Memorize

./: .gitignore  CMakeLists.txt  Memorize.mdj  README.md
include/: abstractwidget.hpp  mainwindow.hpp
include/AbstractWidget/: abstractwidget.hpp
include/FileManager/: filemanager.hpp  filemanagerwidget.hpp
include/Loader/: loader.hpp
include/Menu/: menu.hpp
include/ServiceManager/: servicemanager.hpp  servicemanagerwidget.hpp
include/SystemManager/: systemmanager.hpp  systemmanagerwidget.hpp
include/TelemetryManager/: telemetrymanager.hpp  telemetrymanagerwidget.hpp
include/TemplateSingleton/: templatesingleton.hpp
resource/: res.rc
src/: abstractwidget.cpp  main.cpp  mainwindow.cpp
src/AbstractWidget/: abstractwidget.cpp
src/FileManager/: filemanager.cpp  filemanagerwidget.cpp
src/Loader/: loader.cpp
src/Menu/: menu.cpp
src/ServiceManager/: servicemanager.cpp  servicemanagerwidget.cpp
src/SystemManager/: systemmanager.cpp  systemmanagerwidget.cpp
src/TelemetryManager/: telemetrymanager.cpp  telemetrymanagerwidget.cpp
